# TDGUtils

./: .gitignore  CMakeLists.txt  README.md  main.cpp
OLD/: Doxyfile
OLD/include/: TDGExceptions.h  TDGGlobal.hpp  TDGObject.h  TDGWidgetMapping.h  TDGWindow.h
OLD/src/: TDGApplication.cpp  TDGLog.cpp  TDGWidgetMapping.cpp
include/: TDGApplication.h  TDGGlobal.hpp  TDGImage.hpp  TDGLog.h  TDGObject.h  TDGReflection.h  TDGSDLEventsDebugging.h  TDGWidget.h
src/: TDGApplication.cpp  TDGObject.cpp  main.cpp  ppmwrite.cpp
test/: ppmwrite.cpp
